hphp/test/zend/good/ext/intl/tests/bug60192-getlocale.php.expectf

Catchable fatal error: Collator not initialized in %s/bug60192-getlocale.php on line 10
